--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "directories": {
     "test": "test"
   },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/fugroup/rainlog.git"
+  },
   "scripts": {
     "test": "jest --watch"
   },
-  "author": "Vidar",
+  "author": "fugroup <vidar@fugroup.net>",
   "license": "MIT",
   "devDependencies": {
     "jest": "^23.5.0"
