--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "rainlog",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Command line logging with colors",
-  "main": "log.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/fugroup/rainlog.git"
+    "type": "git",
+    "url": "https://github.com/fugroup/rainlog.git"
   },
   "scripts": {
     "test": "jest --watch"
@@ -16,9 +16,15 @@
   "author": "fugroup <vidar@fugroup.net>",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^23.5.0"
+    "jest": "^23.6.0"
   },
   "dependencies": {
     "colors": "^1.3.1"
-  }
+  },
+  "keywords": [
+    "node",
+    "logger",
+    "color",
+    "production"
+  ]
 }
