Added setting for color and moved to chalk

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rainlog",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Command line logging with colors",
   "main": "index.js",
   "directories": {
@@ -19,7 +19,7 @@
     "jest": "^23.6.0"
   },
   "dependencies": {
-    "colors": "^1.3.1"
+    "chalk": "^2.4.1"
   },
   "keywords": [
     "node",
