--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
   "name": "rainlog",
   "version": "0.4.2",
-  "description": "Advanced command line logger with color support",
+  "description": "Application logger",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fugroup/rainlog.git"
+    "url": "https://github.com/eldoy/rainlog.git"
   },
   "scripts": {
     "test": "jest --watch"
   },
-  "author": "fugroup <vidar@fugroup.net>",
+  "author": "Vidar <vidar@eldoy.com>",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^26.6.3"
   },
   "dependencies": {
-    "chalk": "^2.4.1"
+    "extras": "^0.4.9"
   },
   "keywords": [
     "node",
     "logger",
-    "color",
     "format",
     "util",
     "file",
